feat: project structure - components defined

--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -1,6 +1,5 @@
 // Global variables
-$mainColor: #00c3a5;
-$secondaryColor: #2f7add;
+$mainColor: #2f7add;
 $grayBackground: #eef4fd;
 $textBlue: #3d83df;
 
