--- a/src/App.scss
+++ b/src/App.scss
@@ -1,26 +1,26 @@
-header {
-  background-color: #00c3a5;
-  min-height: 50px;
-}
-
-footer {
-  background-color: #fff;
-  min-height: 20vh;
-}
-.main-wrapper {
-  background-color: #eef4fd;
-  width: 100%;
-}
-main {
-  margin: 0 auto;
-  background-color: #eef4fd;
-  padding: 20px 10px;
-  max-width: 90%;
-  @media screen and (min-width: 1300px) {
-    max-width: 65%;
+.App {
+  &__header {
+    background-color: #eef4fd;
+    padding: 20px 10px;
+    font-family: "Roboto", sans-serif;
   }
-  @media screen and (min-width: 960px) {
-    max-width: 75%;
+  &__main {
+    max-width: 30%;
+    margin: 0 auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    background-color: #eef4fd;
+    padding: 20px 10px;
+    @media screen and (min-width: 1300px) {
+      max-width: 65%;
+    }
+    @media screen and (min-width: 960px) {
+      max-width: 75%;
+    }
+  }
+  &__footer {
+    background-color: #fff;
+    min-height: 20vh;
+    min-height: 50px;
   }
 }
-
