--- a/src/components/Generic/Alert/style.scss
+++ b/src/components/Generic/Alert/style.scss
@@ -1,4 +1,6 @@
 .AlertArea {
-    background-color: rgb(219, 193, 44);
-    color:red;
+  background-color: #ff9800;
+  color: white;
+  padding: 10px;
+  font-weight: bold;
 }
