--- a/src/components/Generic/Button/style.scss
+++ b/src/components/Generic/Button/style.scss
@@ -9,5 +9,9 @@
     text-transform: uppercase;
     font-weight: bold;
     color: #FFF;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     user-select: none;
+    &:disabled{
+        background: #b0bac0;
+    }
 }
