--- a/src/components/LoginInput/style.scss
+++ b/src/components/LoginInput/style.scss
@@ -1,6 +1,7 @@
 .LoginInput {
-  margin: 1rem;
+  margin: 1rem auto;
   display: flex;
+  max-width: 400px;
   flex-direction: column;
   &__label {
     margin: 10px 0 5px 0;
@@ -12,7 +13,7 @@
     margin: 5px 0 20px 0;
     border: 2px rgb(233, 225, 215) solid;
     border-radius: 4px;
-    font-size: 1.0em;
+    font-size: 1.3em;
     padding: 6px;
   }
 }
