--- a/src/components/ProjectListItem/style.scss
+++ b/src/components/ProjectListItem/style.scss
@@ -1,11 +1,17 @@
-.ProjectListItem{
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
+.ProjectListItem {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  width: fit-content;
+  &:nth-child(2n) {
+    background-color: beige;
+    border-radius: 20px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
 
-    &__title{
-        padding-left: 15px;
-        font-size: 1.5rem;
-        margin: .5rem 0;
-    }
+  &__title {
+    padding-left: 15px;
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+  }
 }
