--- a/src/components/UserFinderBlock/style.scss
+++ b/src/components/UserFinderBlock/style.scss
@@ -7,15 +7,23 @@
     flex-direction: column;
     align-items: center;
   }
-  &__user-block {
+
+  @media screen and (min-width: 1000px) and (max-width: 1150px) {
+    padding: 0;
+  }
+
+  &__user {
     width: 50%;
     padding: 0 2rem;
     @media screen and (max-width: 1000px) {
       width: auto;
     }
   }
-  &__projects-block {
+  &__projects {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     @media screen and (max-width: 1000px) {
       width: auto;
     }
