--- a/src/components/UserDetails/style.scss
+++ b/src/components/UserDetails/style.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   margin: 3rem 0;
+  justify-content: center;
   &__avatar {
     width: 128px;
     height: 128px;
