--- a/src/components/UserFinderBlock/style.scss
+++ b/src/components/UserFinderBlock/style.scss
@@ -16,7 +16,7 @@
     width: 50%;
     padding: 0 2rem;
     @media screen and (max-width: 1000px) {
-      width: auto;
+      width: 100%;
     }
   }
   &__projects {
@@ -25,7 +25,7 @@
     flex-direction: column;
     align-items: center;
     @media screen and (max-width: 1000px) {
-      width: auto;
+      width: 100%;
     }
   }
 }
